# OMS-orderflow

./: .gitignore  .gitlab-ci.yml  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: lint.yml  test.yml
app/: entrypoint.sh
app/config/: celery.py  settings.py  urls.py
app/orderflow_app/: admin.py  apps.py  signals.py  tasks.py  urls.py
app/orderflow_app/forms/: cancellations.py  confirmations.py  invoices.py  orders.py  uploadfile.py
app/orderflow_app/management/commands/: generate_data.py
app/orderflow_app/migrations/: 0001_initial.py
app/orderflow_app/models/: cancellations.py  confirmations.py  directories.py  invoices.py  orders.py  report.py
app/orderflow_app/templates/orderflow_app/: .env.template  base.html  index.html  menu.html  report.html
app/orderflow_app/templates/orderflow_app/orders/: orders.html  (+2 more)
app/orderflow_app/tests/: conftest.py  test_forms.py  test_models.py  test_tasks.py
app/orderflow_app/tests/test_views/: test_views.py  test_views_cancellations.py  test_views_confirmations.py  test_views_invoices.py  test_views_orders.py
app/orderflow_app/views/: cancellations.py  confirmations.py  directories.py  invoices.py  orders.py  views.py
docker-build/nginx/: Dockerfile
docker-build/orderflow/: Dockerfile
nginx/: nginx.conf
sample_data/: TEST order-C1- B1-T.00016-01-06-2025.xlsx  TEST order-C2- B1-T.00016-02-06-2025.xlsx  TEST order-K.diverse- B1-T.00016-03-06-2025.xlsx  Test Invoice01 060625.xlsx  Test Invoice02 060625.xlsx  TestConfirmation1 B1 040625.xlsx  TestConfirmation2 B1 050625.xlsx  directories.json
(+12 files in other folders)
